--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "libdlf" %}
-{% set version = "0.1.3" %}
+{% set version = "0.2.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: af7718ec087bfed242837fcc2bfb4705f08218672bf1fd88515d2b08bd7ec300
+  sha256: 21347cf66bdc1d1049a91da3f4586d985eea7bfce392f69fbae2437fc23efeb4
 
 build:
   noarch: python
@@ -29,8 +29,7 @@ test:
 
 about:
   home: https://github.com/emsig/libdlf
-  license: CC-BY-4.0
-  license_family: CC
+  license: BSD-3-Clause
   license_file: LICENSE
   summary: Library for Digital Linear Filters (DLF)
   description: |
