--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,9 +18,11 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - python >=3.10
+    - setuptools
+    - setuptools_scm
   run:
-    - python >=3.6
+    - python >=3.10
     - numpy
 
 test:
